fixed scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,18 +6,18 @@ html, body, #root, .app {
     font-family: "Inter", sans-serif;
 }
 
-::-webkit-scrollbar {
+*::-webkit-scrollbar {
     width:"10px";
 }
 /* Track  */
-::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     background: #7a7f9d;
 }
 /* Handle */
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background: #21295c;
 }
 /* Handle on Hover */
-::-webkit-scrollbar-track:hover {
+*::-webkit-scrollbar-track:hover {
     background: #21295c;
 }
